--- a/lamp-playbook.yaml
+++ b/lamp-playbook.yaml
@@ -6,25 +6,25 @@
     - name : install apache and update ubuntu packages
       apt: 
       - name : apache2
-        update_cache : yes
+        update : yes
         state : present
-    - name : install php 
-      apt :
-        name : php
-        state: present 
-    - name : install libapache2-mod-php
-      apt : 
-        name : libapache2-mod-php
-        state : present
-    - name : install php-mysql
-      apt: 
-        name : php-mysql
-        state : present 
-    - name : install php-cli
-      apt :
-        name: php-cli
-        state : present
-    - name : copy info.php
-      copy:
-       src: info.php
-       dest: /var/www/html/info.php
+      - name : install php 
+        apt :
+         name : php
+         state: present 
+      - name : install libapache2-mod-php
+        apt : 
+         name : libapache2-mod-php
+         state : present
+      - name : install php-mysql
+        apt: 
+         name : php-mysql
+         state : present 
+      - name : install php-cli
+        apt :
+         name: php-cli
+         state : present
+      - name : copy info.php
+        copy:
+         src: info.php
+         dest: /var/www/html/info.php
